# sfml_sample_project

./: CMakeLists.txt
src/: main.cpp
